Fixed nav on mobile

--- a/_sass/theme/_navigation.scss
+++ b/_sass/theme/_navigation.scss
@@ -16,11 +16,11 @@
     .navbar-brand {
       font-size: 1.8em;
       padding: 15px 0;
-      margin-left: 0;
+      margin-left: 15px;
 
       img {
         height: 35px;
-        display: inline;
+        display: inline-block;
         margin-right: 5px;
       }
 
